<resources>
    <string name="app_name">Three In A Row!</string>
    <string name="game_name">Three In A Row!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_high_score">High Score</string>
    <string name="title_activity_game">Game</string>
    <string name="under_construction">Under Construction</string>
    <string name="btn_new_game">New Game</string>
    <string name="current_colour">Current Colour:</string>
    <string name="title_activity_game_settings">Game Settings</string>
    <string name="play_game">Play Game!</string>
    <string name="how_to_play">How to play</string>
    <string name="preferences_title">Settings</string>
    <string name="navigation">Navigation</string>
    <string name="settings">Settings</string>
    <string name="high_scores">High Scores</string>
    <string name="lbl_help_settings">To navigate to the settings screen, first press on the icon at the top right corner</string>
    <string name="lbl_help_settings2">From the options presented with, press on \'Settings\'</string>
    <string name="lbl_help_settings3">To change values for a settings, press on a setting item</string>
    <string name="lbl_help_settings4">From the selection of radio buttons, choose your desired option</string>
    <string name="lbl_help_settings5">Once you\'ve selected your preferred settings, exit the help screen by pressing back on your Android device</string>
    <string name="title_help_settings">Settings</string>
    <string name="title_help_high_scores">High Scores</string>
    <string name="title_help_play">How to Play</string>
    <string name="txt_help_game1">To start the game, press the \'New Game\' button in the bottom right hand corner of the game screen</string>
    <string name="txt_help_game2">Press on the grey tiles to fill it with the \'Current Colour\'</string>
    <string name="txt_help_game3">The aim of the game is to fill the grey tiles with coloured ones…</string>
    <string name="txt_help_game4">…without placing three of the same colour in a row vertically or horizontally</string>
    <string name="timer_text">0</string>
    <string name="table_header_name">Name</string>
    <string name="table_header_time">Time</string>
    <string name="lbl_difficulty">Difficulty:</string>
    <string name="rad_lbl_4x4">4 x 4</string>
    <string name="rad_lbl_5x5">5 x 5</string>
    <string name="rad_lbl_6x6">6 x 6</string>
    <string name="no_high_scores">There are no scores to display</string>
    <string name="lbl_help_high_score">From the high scores page, simply select your filtering options...</string>
    <string name="lbl_help_high_score2">If there are any scores that fit your criteria, they will appear</string>
</resources>
