<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="au.edu.dbuttler1holmesglen.threeinarow.GameActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </android.support.design.widget.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@color/backgroundColour">

        <GridView android:id="@+id/game_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="4"
            android:verticalSpacing="14dp"
            android:horizontalSpacing="14dp"
            android:stretchMode="columnWidth"
            android:gravity="fill"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_below="@+id/txtTimer"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/new_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_new_game"
            android:layout_below="@+id/game_grid"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/txtButton"/>

        <TextView
            android:id="@+id/current_colour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/new_game"
            android:layout_alignBottom="@+id/new_game"
            android:layout_alignParentStart="true"
            android:text="@string/current_colour"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <ImageView
            android:id="@+id/colour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/blue"
            android:layout_alignTop="@+id/new_game"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/txtTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/txtNameHighScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnSubmitScore"
            android:layout_alignBottom="@+id/btnSubmitScore"
            android:layout_alignEnd="@+id/txtTimer"
            android:layout_alignStart="@+id/current_colour"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Enter Name" />

        <Button
            android:id="@+id/btnSubmitScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/new_game"
            android:layout_below="@+id/colour"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="Submit Score"
            android:textColor="@color/txtButton" />

    </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>
</ScrollView>
